--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -62,9 +62,11 @@
         <section class="discover">
             <div class="discover1">
                 <div>
-                    <h2>Population 2022</h2>
-                    <img src="images/ForeignersIncidence.png" alt="Froeigners Incidence Graph">
-                    <p>Territorial extension of Municipality of MOUNT SARATOGA and
+                    <h2>Population 2021</h2>
+                    <p>51.3% of the population is Male.<br>
+                        48.7% of the population is Female.<br>
+                        17.5% of the population are foreigners.<br><br>
+                        Territorial extension of Municipality of MOUNT SARATOGA and
                         related population density, population per gender and number
                         of households, average age and incidence of foreigners.</p>
                 </div>
@@ -81,13 +83,13 @@
                 <div>
                     <h2>Demographic Balance</h2>
                     <img src="images/DemographicBalance.png" alt="Demographic Balance Graph">
-                    <p>Inhabitants on 1th Jan.- 754<br>
+                    <p>Inhabitants on 1th Jan. 2020 - 754<br>
                         Births- 2<br>
                         Deaths- 13<br>
                         Registered- 19<br>
                         Deleted- 8<br>
                         Migration- +11<br>
-                        Inhabitants on 31th Dec.- 754</p>
+                        Inhabitants on 31th Dec. 2021 - 754</p>
                 </div>
             </div>
             <div class="discover4">
@@ -128,50 +130,32 @@
             <div class="discover7">
                 <div class="border">
                     <h2>Church</h2>
-                    <div class="placeholder">
-                        <img class="pics" src="images/placeholder.jpg" data-src="images/church-by-water.jpg"
-                            alt="Church by water">
-                    </div>
+                    <img class="pics" src="images/placeholder.jpg" data-src="images/church-by-water.jpg"
+                        alt="Church by water">
                     <p>The historic Lakeside church build in 1812.</p>
                 </div>
                 <div class="border">
                     <h2>Inn</h2>
-                    <div class="placeholder">
-                        <img class="pics" src="images/placeholder.jpg" data-src="images/church-steeple.jpg"
-                            alt="Church steeple">
-                    </div>
+                    <img class="pics" src="images/placeholder.jpg" data-src="images/church-steeple.jpg"
+                        alt="Church steeple">
                     <p>The Lakeside church steeple and the Saratoga Inn.</p>
                 </div>
                 <div class="border">
                     <h2>Homes</h2>
-                    <div class="placeholder">
-                        <img class="pics" src="images/placeholder.jpg" data-src="images/houses-on-mountain.jpg"
-                            alt="Houses on mountain">
-                    </div>
+                    <img class="pics" src="images/placeholder.jpg" data-src="images/houses-on-mountain.jpg"
+                        alt="Houses on mountain">
                     <p>Homes of the Mount Saratoga community climb the mountainside overlooking the lake.</p>
                 </div>
                 <div class="border">
                     <h2>Shops</h2>
-                    <div class="placeholder">
-                        <img class="pics" src="images/placeholder.jpg" data-src="images/village-street.jpg"
-                            alt="Village streets">
-                    </div>
+                    <img class="pics" src="images/placeholder.jpg" data-src="images/village-street.jpg"
+                        alt="Village streets">
                     <p>Local shops line the cobblestone streets of the village.</p>
                 </div>
                 <div class="border">
                     <h2>Village</h2>
-                    <div class="placeholder">
-                        <img class="pics" src="images/placeholder.jpg" data-src="images/village.jpg" alt="Village">
-                    </div>
+                    <img class="pics" src="images/placeholder.jpg" data-src="images/village.jpg" alt="Village">
                     <p>The fountain of truth, located in the village center square of Mount Saratoga.</p>
-                </div>
-                <div class="border">
-                    <h2>Historic</h2>
-                    <div class="placeholder">
-                        <img class="pics" src="images/placeholder.jpg" data-src="images/lake-church.jpg"
-                            alt="Church by lake">
-                    </div>
-                    <p>The historic Lakeside church and Mount Saratoga Village.</p>
                 </div>
                 <div class="border bottom">
                     <h2>Local Storage</h2>
@@ -179,7 +163,6 @@
                     <hr>
                     <p>Timestamp: <span class="today"></span></p>
                 </div>
-            </div>
             </div>
 
         </section>
@@ -214,6 +197,7 @@
             Last Updated: <span id="updatedDate"></span>
         </p>
     </footer>
+    <script src="js/lazyload.js"></script>
     <script src="js/scripts.js"></script>
 </body>
 
