--- a/chamber/index.html
+++ b/chamber/index.html
@@ -61,9 +61,9 @@
         <section class="containers">
             <div class="box1">
                 <picture>
-                    <source srcset="images/hero02.webp" media="(min-width: 640px) and (max-width: 959px)">
-                    <source srcset="images/hero03.webp" media="(min-width: 960px)">
-                    <img src="images/hero01.webp" alt="Temporary Hero Image">
+                    <source srcset="images/saratoga01.webp" media="(min-width: 640px) and (max-width: 959px)">
+                    <source srcset="images/saratoga03.webp" media="(min-width: 960px)">
+                    <img src="images/saratoga01.webp" alt="Temporary Hero Image">
                 </picture>
                 <!--<img src="images/MountSaratogaTown.jpg" alt="Photo of Mount Saratoga.">-->
                 <h2 class="welcome">Welcome to Mount Saratoga</h2>
