--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -161,7 +161,7 @@
                     <h2>Local Storage</h2>
                     <p><span class="label">Number of Visits to Page:</span><span class="visits"></span></p>
                     <hr>
-                    <p>Timestamp: <span class="today"></span></p>
+                    <p>Days since last visit: <span class="today"></span></p>
                 </div>
             </div>
 
@@ -199,6 +199,7 @@
     </footer>
     <script src="js/lazyload.js"></script>
     <script src="js/scripts.js"></script>
+    <script src="js/localstorage.js"></script>
 </body>
 
 </html>
