--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -40,8 +40,8 @@
             <button id="hamburgerBtn"><span>&#9776;</span>
                 <span>X</span></button>
             <ul id="primaryNav">
-                <li><a class="active" href="index.html">Home</a></li>
-                <li><a href="discover.html">Discover</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li class="active"><a href="discover.html">Discover</a></li>
                 <li><a href="directory.html">Directory</a></li>
                 <li><a href="join.html">Join</a></li>
                 <li><a href="contact.html">Contact</a></li>
@@ -97,7 +97,7 @@
                     <h2>Inhabitants Trend</h2>
                     <img src="images/InhabitantsTrend.png" alt="Inhabitants Trend Graph">
                     <p>
-                        <b>2021 Year Inhabitants on Previous Year</b><br>
+                        2021 Year Inhabitants on Previous Year<br>
                         2018- 774 Inhabitants<br>
                         2019- 778 +0.52%<br>
                         2020- 754 -3.08%<br>
@@ -128,6 +128,7 @@
                 </div>
             </div>
             <div class="discover7">
+                <h2 class="photo-gal">Photo Gallery</h2>
                 <div class="border">
                     <h2>Church</h2>
                     <img class="pics" src="images/placeholder.jpg" data-src="images/church-by-water.jpg"
