--- a/chamber/index.html
+++ b/chamber/index.html
@@ -200,8 +200,9 @@
             Last Updated: <span id="updatedDate"></span>
         </p>
     </footer>
-    <script src="js/scripts.js"></script>
+    <script src="js/headfootdate.js"></script>
     <script src="js/windchill.js"></script>
+    <script src="js/meetingbanner.js"></script>
 </body>
 
 </html>
