--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -199,7 +199,7 @@
         </p>
     </footer>
     <script src="js/lazyload.js"></script>
-    <script src="js/scripts.js"></script>
+    <script src="js/headfootdate.js"></script>
     <script src="js/localstorage.js"></script>
 </body>
 
