--- a/lesson8/tablebuild.html
+++ b/lesson8/tablebuild.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Merry Haymond">
     <meta name="description" content="Practice Building a Table">
-    <link rel="stylesheet" href="/lesson8/css/table.css">
+    <link rel="stylesheet" href="css/table.css">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
     <title>Table Build</title>
 </head>
