--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     Website Planning Document</a></li>
             <li>Lesson 04: <a href="https://mjhaymond.github.io/wdd230/chamber/index.html">
                     Mount Saratoga Chamber of Commerce Homepage</a></li>
-            <li>Lesson 05: <a href="https://mjhaymond.github.io/wdd230/bomtop25/index.html">DOM Manipulation </a>|
+            <li>Lesson 05: <a href="https://mjhaymond.github.io/wdd230/bomtop25/index.html">DOM Manipulation </a>||
                 <a href="https://mjhaymond.github.io/wdd230/chamber/index.html">
                     Chamber Home Page Continued</a>
             </li>
@@ -38,11 +38,15 @@
                     Responsive Design</a>
             </li>
             <li>Lesson 07: <a href="https://mjhaymond.github.io/wdd230/lesson7/lazyload.html">Progressive Loading of
-                    Images </a>|
+                    Images </a>||
                 <a href="https://mjhaymond.github.io/wdd230/chamber/discover.html">
                     The Discover Page</a>
             </li>
-            <li>Lesson 08: <a href="">Title</a></li>
+            <li>Lesson 08: <a href="https://mjhaymond.github.io/wdd230/lesson8/tablebuild.html">Table Build </a>||
+                <a href="https://mjhaymond.github.io/wdd230/chamber/discover.html">
+                    The Join Page</a>
+            </li>
+            </li>
             <li>Lesson 09: <a href="">Title</a></li>
             <li>Lesson 10: <a href="">Title</a></li>
             <li>Lesson 11: <a href="">Title</a></li>
