--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Merry Haymond's Lazy Load Image Assignment">
-    <title>Discover Saratoga Springs</title>
+    <title>Discover Mount Saratoga</title>
     <meta name="description" content="Mount Saratoga Discover-demographics. 
     This website helps business owners learn about the population and demogrraogics 
     of the Mount Saratoga area." />
@@ -54,7 +54,7 @@
 
     <main>
         <div class="discover-title">
-            <h2 class="stats">Statistics</h2>
+            <h1 class="stats">Statistics</h1>
             <p>Resident population and its related trend, balance of nature and migratory balance, birth rate,
                 death rate, growth rate and migration rate in Municipality of Mount Saratoga.</p>
         </div>
