--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -55,10 +55,13 @@
     </header>
     <!-- CONTENT HERE -->
     <main>
-        <h1>Thank you for your Application</h1>
-        <p>Your Mount Saratoga Chamber application has been received. We will get back to
-            you within a week with more information about how to get started.</p>
-
+        <div class="thankyou">
+            <div class="thankyou2">
+                <h1>Thank you for your Application</h1>
+                <p>Your Mount Saratoga Chamber application has been received. <br>We will get back to
+                    you within a week with more information about how to get started.</p>
+            </div>
+        </div>
     </main>
 
     <!-- FOOTER HERE -->
