--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -95,6 +95,7 @@
         </p>
     </footer>
 
+    <script src="js/thankyou.js"></script>
     <script src="js/headfootdate.js"></script>
 </body>
 
