--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     The Discover Page</a>
             </li>
             <li>Lesson 08: <a href="https://mjhaymond.github.io/wdd230/lesson8/tablebuild.html">Table Build </a>||
-                <a href="https://mjhaymond.github.io/wdd230/chamber/discover.html">
+                <a href="https://mjhaymond.github.io/wdd230/chamber/join.html">
                     The Join Page</a>
             </li>
             </li>
