--- a/chamber/join.html
+++ b/chamber/join.html
@@ -74,8 +74,8 @@
                         <!---A business position title field of type text that is not required but only 
                         accepts alpha characters, hyphens, and spaces with a minimum of seven 
                         characters using a regular expression (Links to an external site.) pattern.-->
-                        <label class="top">Business Position Title <input type="text" pattern="[a-zA-Z\s\-]{7,}"
-                                name="title"></label>
+                        <label class="top">Business Position Title (Minimum of 7 characters, letters, spaces, and
+                            hyphens<input type="text" pattern="[a-zA-Z\s\-]{7,}" name="title"></label>
                         <!--A business description textarea where the user can briefly describe their business.-->
                         <label class="top" for="content">Business Description</label>
                         <textarea name="textarea" id="content"></textarea>
