--- a/lesson9/prophets.html
+++ b/lesson9/prophets.html
@@ -7,8 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <meta name="description" content="Activity were we learn to use JSON to retrieve data.">
-    <title>Latter-day Prophet Card Page Activity</title>
+    <title>Prophet Cards Page</title>
 
+    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400&family=Roboto+Slab:wght@500;600&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="css/prophets.css">
 
 </head>
