--- a/index.html
+++ b/index.html
@@ -47,8 +47,10 @@
                     The Join Page</a>
             </li>
             </li>
-            <li>Lesson 09: <a href="https://mjhaymond.github.io/wdd230/lesson9/prophets.html">Prophet Cards</a></li>
-            <a href="https://mjhaymond.github.io/wdd230/chamber/directory.html">The Directory Page</a>
+            <li>Lesson 09: <a href="https://mjhaymond.github.io/wdd230/lesson9/prophets.html">Prophet Cards</a> ||
+                <a href="https://mjhaymond.github.io/wdd230/chamber/directory.html">The Directory Page</a>
+            </li>
+
             <li>Lesson 10: <a href="">Title</a></li>
             <li>Lesson 11: <a href="">Title</a></li>
         </ul>
