--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
             </li>
             </li>
             <li>Lesson 09: <a href="https://mjhaymond.github.io/wdd230/lesson9/prophets.html">Prophet Cards</a> ||
+                <a href="https://mjhaymond.github.io/wdd230/lesson9/wireframe.html">Wireframes</a> ||
                 <a href="https://mjhaymond.github.io/wdd230/chamber/directory.html">The Directory Page</a>
             </li>
 
