--- a/lesson9/wireframe.html
+++ b/lesson9/wireframe.html
@@ -24,9 +24,16 @@
         <h1>Wireframes for Directory</h1>
     </header>
     <main>
-        <div class="pics">
+        <div>
+            <h2>Mobile Wireframe</h2>
             <img src="images/Mobile-wireframe.png" alt="Wireframe of directory for mobile">
+        </div>
+        <div>
+            <h2>Tablet Wireframe</h2>
             <img src="images/Tablet-wireframe.png" alt="Wireframe of directory for tablet">
+        </div>
+        <div>
+            <h2>Desktop Wireframe</h2>
             <img src="images/Desktop-wireframe.png" alt="Wireframe of directory for desktop">
         </div>
     </main>
