--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -7,10 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <meta name="description" content="Merry Haymond's Lazy Load Image Assignment">
-    <title>Discover Saratoga Springs</title>
-    <meta name="description" content="Mount Saratoga Discover-demographics. 
-    This website helps business owners learn about the population and demogrraogics 
-    of the Mount Saratoga area." />
+    <title>Mount Saratoga Directory</title>
+    <meta name="description" content="this page has a listing of business and their contact info
+    that are part of the Chamber." />
 
     <link rel="shortcut icon" href="favicon.ico">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -30,7 +29,7 @@
             <img src="images/MountSaratoga-1.webp" alt="Mount Saratoga Logo">
         </picture>
 
-        <h1>Discover<span id="cc"><br>Mount Saratoga</span></h1>
+        <h1>Directory<span id="cc"><br>Mount Saratoga</span></h1>
 
         <div class="social">
             <a href="https://facebook.com" target="blank"><img src="images/facebookLogo.png" alt="Facebook Logo"
@@ -55,7 +54,7 @@
     </header>
 
     <main>
-
+        <div class="company"></div>
 
     </main>
 
@@ -91,6 +90,8 @@
     </footer>
 
     <script src="js/headfootdate.js"></script>
+    <script src="js/directory.js"></script>
+    <script> console.log(JSON.parse(companies))</script>
 
 </body>
 
