--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -54,7 +54,12 @@
     </header>
 
     <main>
-        <div class="company"></div>
+        <h2 id="directorytitle">Business Directory</h2>
+        <div class="company">
+            <button id="grid">Grid</button>
+            <button id="list">List</button>
+        </div>
+        <div class="groups"></div>
 
     </main>
 
