--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -55,7 +55,7 @@
 
     <main>
         <h1 id="directorytitle">Business Directory</h1>
-        <div class="company">
+        <div class="gridListBtns">
             <button id="grid">Grid</button>
             <button id="list">List</button>
         </div>
