--- a/chamber/index.html
+++ b/chamber/index.html
@@ -79,21 +79,23 @@
                 </picture>
                 <!--<img src="images/July24thFair.jpg" alt="Ferris Wheel">-->
                 <h2 class="event">Event</h2>
-                <p>Founder's Day Fair! Come enjoy the rides, food, and music July 18th, at the fairgrounds!</p>
+                <p>Founder's Day Fair! Food, Rides & Fun! July 18th, at the fairgrounds!</p>
             </div>
             <div class="box3">
-                <picture>
-                    <source srcset="images/weather03.webp" media="(min-width: 600px)">
-                    <img src="images/weather01.webp" alt="Misty Mountains">
-                </picture>
-                <!--<img src="images/clouds_sun_weather_icon.png" alt="Sun and Clouds icon">-->
                 <h2 class="weather">Weather</h2>
                 <div class="temp-box">
-                    <p><span class="current-temp">46</span>&deg;F</p>
+                    <div id="weathergrid">
+                        <p id="weather1"><span id="currtemp"></span>&#176;F</p>
+                        <figure id="weather4">
+                            <span id="iconsrc"></span>
+                            <img src="https://openweathermap.org/img/w/" alt="Weather Icon Picture" id="weathericon" />
+                            <figcaption></figcaption>
+                        </figure>
+                    </div>
                     <hr>
-                    <p>Wind Speed: <span class="wind-speed">5</span> mph</p>
+                    <p id="weather2">Wind Speed: <span id="windspeed"></span> mph</p>
                     <hr>
-                    <p>Wind Chill: <span class="windchill"></span></p>
+                    <p id="weather3">Wind Chill: <span id="windchill"></span></p>
                 </div>
             </div>
             <div class="box4">
@@ -196,7 +198,7 @@
         </section>
         <p id="lastline">
             &copy;<span id="currentYear"></span> Mount Saratoga Chamber |
-            Merry Haymond | WDD 230 Project |
+            Merry Haymond | WDD 230 Project | <a href="https://openweathermap.org//">OpenWeatherMap.org</a> |
             Last Updated: <span id="updatedDate"></span>
         </p>
     </footer>
