--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
                 <a href="https://mjhaymond.github.io/wdd230/chamber/directory.html">The Directory Page</a>
             </li>
 
-            <li>Lesson 10: <a href="">Title</a></li>
+            <li>Lesson 10: <a href="https://mjhaymond.github.io/wdd230/lesson10/weatherapi.html">Weather API</a> ||
+                <a href="https://mjhaymond.github.io/wdd230/chamber/index.html">Homepage Weather API Update</a>
+            </li>
             <li>Lesson 11: <a href="">Title</a></li>
         </ul>
     </main>
