--- a/chamber/contact.html
+++ b/chamber/contact.html
@@ -55,8 +55,93 @@
     </header>
 
     <main>
+        <div id="pg-title">
+            <h1>Contact Information</h1>
+        </div>
+        <div class="contact-grid">
+            <div class="contact-box">
+                <div class="contact-box">
+                    <h2>Location & Hours</h2>
+                    <p><strong>N. Mount Saratoga Blvd</strong></p>
+                    <p><strong>Mount Saratoga, Utah 38459</strong></p>
+                    <p>Monday - Friday 9am - 5pm</p>
+                    <br>
 
+                    <h2>Chamber Contacts</h2>
 
+                    <p><strong>Todd Smith, CCE</strong></p>
+                    <p>President</p>
+                    <p>tsmith@saratoga.org</p>
+                    <br>
+                    <p><strong>Danny Romero</strong></p>
+                    <p>Executive Vice President</p>
+                    <p>dromero@saratoga.org</p>
+                    <br>
+                    <p><strong>AnnMarie Bellows</strong></p>
+                    <p>Vice President - Tourism</p>
+                    <p>abellows@saratoga.org</p>
+                    <br>
+                    <p><strong>Lizzy Roggen</strong></p>
+                    <p>Vice President, Programs/Benefits Southern Saratoga County</p>
+                    <p>lroggen@saratoga.org</p>
+                    <br>
+                    <p><strong>Debbra Zooman</strong></p>
+                    <p>Vice President of Office Operations</p>
+                    <p>dzooman@saratoga.org</p>
+                    <br>
+                    <p><strong>Richard Richardson</strong></p>
+                    <p>Vice President of Communications</p>
+                    <p>rrichardson@saratoga.org</p>
+                    <br>
+                    <p><strong>Anna Coleson</strong></p>
+                    <p>Vice President of Events & Marketing</p>
+                    <p>acoleson@saratoga.org</p>
+                    <br>
+                    <p><strong>Santi Thornbeck</strong></p>
+                    <p>Director of Membership Sales and Retention</p>
+                    <p>sthornbeck@saratoga.org</p>
+                    <br>
+                    <p><strong>Maddison Gibson</strong></p>
+                    <p>Vice President of Integrated Marketing Communications</p>
+                    <p>mgibson@saratoga.org</p>
+                </div>
+            </div>
+            <div class="contact-box">
+                <div class="conctact-img">
+                    <picture><img src="images/church-by-water.jpg" alt="Chruch by water"></picture>
+                </div>
+            </div>
+        </div>
+        <h2 class="contact-form">Chamber Contact Form</h2>
+        <form class="mem-info" action="thankyou.html">
+            <fieldset>
+                <legend>Contact Information</legend>
+                </label>
+                <br />
+                <p>Are You A Member of the Mount Saratoga Chamber of Commerce?</p>
+                <label><input type="checkbox" name="member" value="Yes" />Yes</label><br />
+                <label><input type="checkbox" name="non-member" value="No" />No</label><br />
+                <label class="top">
+                    Full Name*<input type="text" name="fullname" required />
+                </label>
+                <label class="top">
+                    Email*<input type="email" name="email" required />
+                </label>
+                <label class="top">
+                    Cell Phone Number<input type="tel" name="cell" />
+                </label>
+                <label class="top">
+                    Company<input type="text" name="company" />
+                </label>
+                <label class="top">
+                    Business Address<input type="text" name="address" />
+                    <label class="top" for="content">Comments/Questions</label>
+                    <textarea name="textarea" id="content"></textarea>
+
+                    <button class="send sndc" type="submit" value="submit">Send Question or Comment</button>
+            </fieldset>
+
+        </form>
     </main>
 
     <!-- FOOTER HERE -->
