--- a/chamber/join.html
+++ b/chamber/join.html
@@ -89,9 +89,14 @@
                     <label class="sbs"><input type="radio" name="Bronze Membership"> Bronze Member</label>
                     <label class="sbs"><input type="radio" name="Silver Membership"> Silver Member</label>
                     <label class="sbs"><input type="radio" name="Gold Membership"> Gold Member</label>
+
+                    <button class="send" type="submit" value="submit">
+                        Join Chamber
+                    </button>
+
+
                 </fieldset>
 
-                <input type="submit" value="Join Chamber" name="button" class="submitBtn">
             </form>
 
             <section id="memberlevels">
