--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
             <li>Lesson 10: <a href="https://mjhaymond.github.io/wdd230/lesson10/weatherapi.html">Weather API</a> ||
                 <a href="https://mjhaymond.github.io/wdd230/chamber/index.html">Homepage Weather API Update</a>
             </li>
-            <li>Lesson 11: <a href="">Title</a></li>
+            <li>Lesson 11: <a href="https://mjhaymond.github.io/wdd230/chamber/contact.html">Mount Saratoga Chamber of
+                    Commerce & Contact Page</a></li>
         </ul>
     </main>
     <footer>
