--- a/chamber/contact.html
+++ b/chamber/contact.html
@@ -108,11 +108,11 @@
             </div>
             <div class="contact-box">
                 <div class="conctact-img">
-                    <picture><img src="images/church-by-water.jpg" alt="Chruch by water"></picture>
+                    <picture><img src="images/saratoga03.webp" alt="Chruch by water"></picture>
                 </div>
             </div>
         </div>
-        <h2 class="contact-form">Chamber Contact Form</h2>
+
         <form class="mem-info" action="thankyou.html">
             <fieldset>
                 <legend>Contact Information</legend>
