--- a/chamber/contact.html
+++ b/chamber/contact.html
@@ -6,11 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta name="description" content="Merry Haymond's Lazy Load Image Assignment">
-    <title>Discover Saratoga Springs</title>
-    <meta name="description" content="Mount Saratoga Discover-demographics. 
-    This website helps business owners learn about the population and demogrraogics 
-    of the Mount Saratoga area." />
+    <title>Contact Page Mount Saratoga</title>
+    <meta name="description" content="Mount Saratoga Contact page, employees, hours of operation
+    and question/comments form." />
 
     <link rel="shortcut icon" href="favicon.ico">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -116,14 +114,12 @@
         <form class="mem-info" action="thankyou.html">
             <fieldset>
                 <legend>Contact Information</legend>
-                </label>
                 <br />
                 <p>Are You A Member of the Mount Saratoga Chamber of Commerce?</p>
                 <label><input type="checkbox" name="member" value="Yes" />Yes</label><br />
                 <label><input type="checkbox" name="non-member" value="No" />No</label><br />
                 <label class="top">
-                    Full Name*<input type="text" name="fullname" required />
-                </label>
+                    Full Name*<input type="text" name="fullname" required /></label>
                 <label class="top">
                     Email*<input type="email" name="email" required />
                 </label>
@@ -137,8 +133,8 @@
                     Business Address<input type="text" name="address" />
                     <label class="top" for="content">Comments/Questions</label>
                     <textarea name="textarea" id="content"></textarea>
-
-                    <button class="send sndc" type="submit" value="submit">Send Question or Comment</button>
+                </label>
+                <button class="send sndc" type="submit" value="submit">Send Question or Comment</button>
             </fieldset>
 
         </form>
