--- a/chamber/contact.html
+++ b/chamber/contact.html
@@ -131,8 +131,9 @@
                 </label>
                 <label class="top">
                     Business Address<input type="text" name="address" />
-                    <label class="top" for="content">Comments/Questions</label>
-                    <textarea name="textarea" id="content"></textarea>
+                </label>
+                <label class="top" for="content">Comments/Questions</label>
+                <textarea name="textarea" id="content"></textarea>
                 </label>
                 <button class="send sndc" type="submit" value="submit">Send Question or Comment</button>
             </fieldset>
