--- a/chamber/index.html
+++ b/chamber/index.html
@@ -192,7 +192,7 @@
                     www.mountsaratogacc.com<br>
                     801-566-4346
                 </p>
-                <a href="https://www.google.com/maps/">
+                <a href="https://goo.gl/maps/8hRnRM7rmFGruyqs6">
                     <i class="material-icons">&#xe567;</i>Location Map</a>
             </div>
         </section>
