--- a/chamber/contact.html
+++ b/chamber/contact.html
@@ -28,7 +28,7 @@
             <img src="images/MountSaratoga-1.webp" alt="Mount Saratoga Logo">
         </picture>
 
-        <h1>Discover<span id="cc"><br>Mount Saratoga</span></h1>
+        <h1>Contact<span id="cc"><br>Mount Saratoga</span></h1>
 
         <div class="social">
             <a href="https://facebook.com" target="blank"><img src="images/facebookLogo.png" alt="Facebook Logo"
